--- a/src/PAGES/SIGN_UP_PAGE/SIGN_UP_PAGE.scss
+++ b/src/PAGES/SIGN_UP_PAGE/SIGN_UP_PAGE.scss
@@ -26,8 +26,10 @@
     font-weight: 300;
   }
 }
+// <i class={`fas ${!errors.username ? "fa-check" : "fa-times"}`}></i>
 
-h2 {
-  background: orange;
-
-}
+// const [showMark, setShowMark] = useState({
+//   usernameCheck: null,
+//   emailChecked: null,
+//   passwordChecked: null,
+// });
