--- a/src/index.scss
+++ b/src/index.scss
@@ -70,6 +70,8 @@ $darkRed: rgb(133, 0, 0);
 $imageBorderRadius: 50px;
 ///properties
 
+$globalRed:rgb(128, 5, 5);
+
 $radius: 0.5rem;
 
 //skeleton loaders color
